Change rest of palces to use services
